--- a/distribution/test/itests/test-itests-common/pom.xml
+++ b/distribution/test/itests/test-itests-common/pom.xml
@@ -84,8 +84,13 @@
         <dependency>
             <groupId>org.apache.karaf.itests</groupId>
             <artifactId>itests</artifactId>
-            <version>2.4.2</version>
+            <version>${karaf.version}</version>
             <type>test-jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.karaf.bundle</groupId>
+            <artifactId>org.apache.karaf.bundle.blueprintstate</artifactId>
+            <version>${karaf.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
