--- a/platform/landing-page/pom.xml
+++ b/platform/landing-page/pom.xml
@@ -25,8 +25,7 @@
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
