--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <cxf.version>3.1.4</cxf.version>
         <cxf.xpp3.bundle.version>1.1.4c_6</cxf.xpp3.bundle.version>
         <jts.bundle.version>1.12_1</jts.bundle.version>
-        <karaf.version>2.4.3</karaf.version>
+        <karaf.version>4.0.4</karaf.version>
         <lux.version>1.2</lux.version>
         <opengis.bundle.version>${org.geotools.version}_1</opengis.bundle.version>
         <org.geotools.bundle.version>${org.geotools.version}_1</org.geotools.bundle.version>
@@ -72,13 +72,17 @@
         <org.slf4j.version>1.7.1</org.slf4j.version>
         <powermock.version>1.5.4</powermock.version>
         <tika.version>1.7</tika.version>
-        <servlet-api.version>3.0-alpha-1</servlet-api.version>
+        <servlet-api.version>3.1.0</servlet-api.version>
         <commons-lang.version>2.6</commons-lang.version>
         <handlebars.version>2.0.0</handlebars.version>
         <antlr.version>4.3</antlr.version>
         <lux.woodstox.version>4.1.1</lux.woodstox.version>
         <guava.version>18.0</guava.version>
         <findbugs.version>3.0.1</findbugs.version>
+        <commons-codec.version>1.10</commons-codec.version>
+        <spring31.version>3.1.4.RELEASE</spring31.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <jetty.version>9.2.10.v20150310</jetty.version>
         <validation.version>1.1.0.Final</validation.version>
     </properties>
     <!--
@@ -291,7 +295,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>2.10</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -323,8 +327,8 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.karaf.tooling</groupId>
-                    <artifactId>features-maven-plugin</artifactId>
-                    <version>2.3.8</version>
+                    <artifactId>karaf-maven-plugin</artifactId>
+                    <version>${karaf.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
