DDF-1648 - updated kernel to new karaf features and kernel starts correctly

--- a/distribution/ddf-common/src/main/resources/etc/system.properties
+++ b/distribution/ddf-common/src/main/resources/etc/system.properties
@@ -99,6 +99,11 @@ karaf.shell.init.script = ${karaf.etc}/shell.init.script
 
 
 #
+# User name for the Karaf local console
+#
+karaf.local.user = admin
+
+#
 # Roles to use when logging into a local Karaf console.
 # The syntax is the following:
 #   [classname:]principal
@@ -107,7 +112,7 @@ karaf.shell.init.script = ${karaf.etc}/shell.init.script
 # and principal is the name of the principal of that class
 # (defaults to admin).
 #
-karaf.local.roles = admin,manager,viewer
+karaf.local.roles = admin,manager,viewer,systembundles
 
 #
 # Set this empty property to avoid errors when validating xml documents.
