--- a/distribution/ddf/pom.xml
+++ b/distribution/ddf/pom.xml
@@ -59,13 +59,13 @@
             -->
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
-                <artifactId>features-maven-plugin</artifactId>
+                <artifactId>karaf-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>add-features-to-repo</id>
+                        <id>features-add-to-repository</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>add-features-to-repo</goal>
+                            <goal>features-add-to-repository</goal>
                         </goals>
                         <configuration>
                             <inherited>false</inherited>
