--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -42,30 +42,23 @@ featuresRepositories= \
 #
 # Comma separated list of features to install at startup
 featuresBoot= \
- karaf-framework, \
- shell, \
- features, \
- admin, \
- config, \
- ssh, \
- management, \
- kar, \
- deployer, \
+ standard, \
  eventadmin, \
  jasypt-encryption, \
  http, \
  platform-delegate-filter, \
  war, \
- spring, \
- spring-dm, \
- spring-jms, \
- spring-tx, \
- kernel-webconsole, \
+ webconsole, \
  kernel-webconsolebranding, \
  platform-app, \
  security-services-app, \
  admin-app, \
  admin-modules-installer
+
+ #spring, \
+  #spring-dm, \
+  #spring-jms, \
+  #spring-tx, \
 
 
 #
