--- a/distribution/ddf/src/main/filtered-resources/etc/org.codice.ddf.admin.application.service.impl.ApplicationServiceImpl.config
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.codice.ddf.admin.application.service.impl.ApplicationServiceImpl.config
@@ -1,2 +1,2 @@
 service.pid="org.codice.ddf.admin.application.service.impl.ApplicationServiceImpl"
-ignoredApplications=["karaf-${karaf.version}","kernel-${project.version}","org.ops4j.pax.web-${pax.web.version}","org.ops4j.pax.cdi-${pax.cdi.version}","install-profiles-${project.version}","kernel-webconsole","karaf-enterprise-${karaf.version}","spring-${karaf.version}"]
+ignoredApplications=["karaf-${karaf.version}","kernel-${project.version}","org.ops4j.pax.web-${pax.web.version}","org.ops4j.pax.cdi-${pax.cdi.version}","install-profiles-${project.version}","enterprise-${karaf.version}","spring-${karaf.version}"]
