--- a/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -20,7 +20,12 @@
 #
 # Comma separated list of features repositories to register by default
 #
-featuresRepositories=mvn:${project.groupId}/${project.artifactId}/${project.version}/xml/features,mvn:org.apache.karaf.assemblies.features/standard/${karaf.version}/xml/features,mvn:org.apache.karaf.assemblies.features/spring/${karaf.version}/xml/features,mvn:org.apache.karaf.assemblies.features/enterprise/${karaf.version}/xml/features
+featuresRepositories=mvn:${project.groupId}/${project.artifactId}/${project.version}/xml/features,\
+mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features,\
+mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features,\
+mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features
+#mvn:org.apache.karaf.features/enterprise/${karaf.version}/xml/features
+# We don't use any features from enterprise although that's what the subsystems feature is defined.
 
 # The Karaf repo is included in the kernel feature but Karaf failed to read it due to an exception parsing
 # the mvn URL of the ddf-minimal feature file.  This does not need to be done for distros inheriting from ddf-minimal
@@ -28,4 +33,9 @@ featuresRepositories=mvn:${project.groupId}/${project.artifactId}/${project.vers
 #
 # Comma separated list of features to install at startup
 #
-featuresBoot=karaf-framework,shell,features,service-security,admin,config,ssh,management,kar,deployer,diagnostic,eventadmin,jasypt-encryption,kernel-webconsole,spring,spring-dm,spring-jms,spring-tx
+featuresBoot=\
+standard,\
+service-security,\
+eventadmin,\
+jasypt-encryption,\
+kernel-webconsolebranding
