DDF-1648 - platform-app starts. ui features need to be moved out

--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -42,18 +42,14 @@ featuresRepositories= \
 #
 # Comma separated list of features to install at startup
 featuresBoot= \
- standard, \
- eventadmin, \
- jasypt-encryption, \
- http, \
- platform-delegate-filter, \
- war, \
- webconsole, \
+ kernel, \
+ web, \
  kernel-webconsolebranding, \
  platform-app, \
- security-services-app, \
- admin-app, \
- admin-modules-installer
+
+ #security-services-app, \
+ #admin-app, \
+ #admin-modules-installer
 
  #spring, \
   #spring-dm, \
