--- a/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/kernel/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -34,8 +34,5 @@ mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features
 # Comma separated list of features to install at startup
 #
 featuresBoot=\
-standard,\
-service-security,\
-eventadmin,\
-jasypt-encryption,\
+kernel,\
 kernel-webconsolebranding
