--- a/platform/security/rest/security-rest-cxfwrapper/pom.xml
+++ b/platform/security/rest/security-rest-cxfwrapper/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>security-rest-cxfwrapper</artifactId>
     <name>DDF :: Security :: Rest :: CXF Wrapper</name>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>ddf.security.core</groupId>
@@ -83,22 +83,6 @@
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>
-                            ddf-security-common
-                        </Embed-Dependency>
-                        <Import-Package>
-                            *
-                        </Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
