DDF-1648 - security-services-app starts and can successfully authenticate to the webconsole

--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -46,8 +46,8 @@ featuresBoot= \
  web, \
  kernel-webconsolebranding, \
  platform-app, \
+ security-services-app, \
 
- #security-services-app, \
  #admin-app, \
  #admin-modules-installer
 
