--- a/platform/security/sts/security-sts-server/pom.xml
+++ b/platform/security/sts/security-sts-server/pom.xml
@@ -126,7 +126,7 @@
                             net.sf.ehcache.config;resolution:=optional;version="[2.5,3.0.0)",
                             ch.qos.logback.classic;resolution:=optional;version="[1.0,2)",
                             com.hazelcast.core;resolution:=optional,
-                            org.codice.ddf.platform.util,
+                            org.springframework.ldap*;resolution:=optional,
                             *
                         </Import-Package>
                         <Private-Package>
