DDF-1648 - admin-app working with commands and installer. Security authenticates acces to the UI.

--- a/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/distribution/ddf/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -47,15 +47,8 @@ featuresBoot= \
  kernel-webconsolebranding, \
  platform-app, \
  security-services-app, \
-
- #admin-app, \
- #admin-modules-installer
-
- #spring, \
-  #spring-dm, \
-  #spring-jms, \
-  #spring-tx, \
-
+ admin-app, \
+ admin-modules-installer
 
 #
 # Defines if the boot features are started in asynchronous mode (in a dedicated thread)
