--- a/platform/admin/modules/security-certificate-adminmodule/pom.xml
+++ b/platform/admin/modules/security-certificate-adminmodule/pom.xml
@@ -14,73 +14,58 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>security</artifactId>
-        <groupId>ddf.platform.security</groupId>
+        <artifactId>admin-modules</artifactId>
+        <groupId>ddf.admin.modules</groupId>
         <version>2.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ddf.security.admin</groupId>
-    <artifactId>security-admin-module</artifactId>
-    <name>DDF :: Security :: Admin</name>
+    <name>DDF :: Admin :: Modules :: Security Certificate UI</name>
+    <artifactId>admin-security-certificate-ui</artifactId>
     <packaging>bundle</packaging>
     <dependencies>
+        <dependency>
+            <groupId>ddf.admin.core</groupId>
+            <artifactId>admin-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>ddf.admin.core</groupId>
             <artifactId>admin-core-appservice</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-ext</artifactId>
+        </dependency>
+        <dependency>
             <groupId>ddf.platform.error</groupId>
             <artifactId>platform-error-servlet</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>ddf.lib</groupId>
-            <artifactId>grunt-port-allocator</artifactId>
-            <version>${project.version}</version>
-            <type>tar.gz</type>
-            <classifier>npm</classifier>
-        </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>unpack</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>unpack</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>ddf.lib</groupId>
-                                    <artifactId>grunt-port-allocator</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>tar.gz</type>
-                                    <classifier>npm</classifier>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>${project.build.directory}/npm</outputDirectory>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>grunt build</id>
+                        <id>grunt install</id>
                         <goals>
                             <goal>grunt</goal>
                         </goals>
+                        <phase>install</phase>
                         <configuration>
-                            <arguments>build test --force</arguments>
+                            <arguments>build</arguments>
                         </configuration>
                     </execution>
                 </executions>
@@ -90,15 +75,10 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Web-ContextPath>/security-config</Web-ContextPath>
+                        <Embed-Dependency>platform-error-servlet</Embed-Dependency>
+                        <Web-ContextPath>/admin/certificate</Web-ContextPath>
                         <_wab>src/main/webapp,${project.build.directory}/webapp</_wab>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>
-                            platform-error-servlet
-                        </Embed-Dependency>
-                        <Import-Package>
-                            *
-                        </Import-Package>
                         <Export-Package/>
                     </instructions>
                 </configuration>
@@ -145,61 +125,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- After the doc directory is more consistent across all repositories
-                 there should not be a need for the gem-maven-plugin and
-                 maven-antrun-plugin in this pom file to generate docs -->
-            <plugin>
-                <groupId>de.saumya.mojo</groupId>
-                <artifactId>gem-maven-plugin</artifactId>
-                <version>1.0.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-            </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.asciidoctor</groupId>-->
-            <!--<artifactId>asciidoctor-maven-plugin</artifactId>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>output-html</id>-->
-            <!--<phase>generate-resources</phase>-->
-            <!--<goals>-->
-            <!--<goal>process-asciidoc</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<sourceDirectory>src/main/doc</sourceDirectory>-->
-            <!--<outputDirectory>target/webapp</outputDirectory>-->
-            <!--<backend>html</backend>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>sauce</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.eirslett</groupId>
-                        <artifactId>frontend-maven-plugin</artifactId>
-                        <version>0.0.26</version>
-                        <executions>
-                            <execution>
-                                <id>grunt build</id>
-                                <goals>
-                                    <goal>grunt</goal>
-                                </goals>
-                                <configuration>
-                                    <arguments>test:sauce</arguments>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
