--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
         <spring31.version>3.1.4.RELEASE</spring31.version>
         <commons-collections.version>3.2.1</commons-collections.version>
         <jetty.version>9.2.10.v20150310</jetty.version>
+        <pax.web.version>4.2.4</pax.web.version>
+        <pax.cdi.version>0.12.0</pax.cdi.version>
         <validation.version>1.1.0.Final</validation.version>
     </properties>
     <!--
