DDF-1648 - catalog-app working

--- a/catalog/core/catalog-core-commands/pom.xml
+++ b/catalog/core/catalog-core-commands/pom.xml
@@ -121,6 +121,7 @@
                             catalog-core-api-impl,
                             ddf-security-common,
                             platform-util-unavailableurls,
+                            platform-util
                         </Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
                         <Private-Package>
