--- a/catalog/security/catalog-security-policyplugin/pom.xml
+++ b/catalog/security/catalog-security-policyplugin/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>slf4j-log4j12</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -50,7 +54,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Embed-Dependency>catalog-core-api-impl;scope=!test</Embed-Dependency>
+                        <Embed-Dependency>catalog-core-api-impl;scope=!test,platform-util</Embed-Dependency>
                         <Export-Package/>
                     </instructions>
                 </configuration>
