--- a/catalog/core/catalog-core-impl/metacard-type-registry/pom.xml
+++ b/catalog/core/catalog-core-impl/metacard-type-registry/pom.xml
@@ -43,6 +43,10 @@
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -51,7 +55,7 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Embed-Dependency>catalog-core-api-impl</Embed-Dependency>
+                        <Embed-Dependency>catalog-core-api-impl,platform-util</Embed-Dependency>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>
                             ddf.catalog.data,
