--- a/catalog/plugin/catalog-plugin-jpeg2000-thumbnail-converter/pom.xml
+++ b/catalog/plugin/catalog-plugin-jpeg2000-thumbnail-converter/pom.xml
@@ -45,6 +45,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
@@ -68,8 +72,10 @@
                         <Embed-Dependency>
                             catalog-core-api-impl,
                             jai-imageio-core-standalone,
-                            jai-imageio-jpeg2000
+                            jai-imageio-jpeg2000,
+                            platform-util
                         </Embed-Dependency>
+                        <Import-Package>!sun.security.action,*</Import-Package>
                         <Export-Package/>
                     </instructions>
                 </configuration>
