--- a/catalog/security/catalog-security-plugin/pom.xml
+++ b/catalog/security/catalog-security-plugin/pom.xml
@@ -35,6 +35,10 @@
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -44,9 +48,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Import-Package>
-                            *
-                        </Import-Package>
+                        <Embed-Dependency>platform-util</Embed-Dependency>
                         <Export-Package/>
                     </instructions>
                 </configuration>
