--- a/catalog/transformer/catalog-transformer-geojson-metacard/pom.xml
+++ b/catalog/transformer/catalog-transformer-geojson-metacard/pom.xml
@@ -36,6 +36,10 @@
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -46,7 +50,8 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
-                            catalog-core-api-impl;scope=!test
+                            catalog-core-api-impl;scope=!test,
+                            platform-util
                         </Embed-Dependency>
                         <Export-Package>
                             ddf.catalog.transformer.metacard.geojson;version=${project.version}
