--- a/catalog/transformer/catalog-transformer-geojson-queryresponse/pom.xml
+++ b/catalog/transformer/catalog-transformer-geojson-queryresponse/pom.xml
@@ -44,7 +44,10 @@
         <dependency>
             <groupId>ddf.catalog.core</groupId>
             <artifactId>catalog-core-api-impl</artifactId>
-            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>platform-util</artifactId>
         </dependency>
     </dependencies>
     <build>
@@ -57,7 +60,8 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>
                             json-smart,
-                            catalog-core-api-impl;scope=!test
+                            catalog-core-api-impl;scope=!test,
+                            platform-util
                         </Embed-Dependency>
                         <Export-Package/>
                     </instructions>
