--- a/catalog/content/content-app/pom.xml
+++ b/catalog/content/content-app/pom.xml
@@ -20,7 +20,7 @@
         <version>2.9.0-SNAPSHOT</version>
     </parent>
     <artifactId>content-app</artifactId>
-    <packaging>pom</packaging>
+    <packaging>kar</packaging>
     <name>DDF :: Content App</name>
     <build>
         <plugins>
@@ -47,12 +47,12 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.karaf.tooling</groupId>
-                <artifactId>features-maven-plugin</artifactId>
+                <artifactId>karaf-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>create-kar</id>
+                        <id>kar</id>
                         <goals>
-                            <goal>create-kar</goal>
+                            <goal>kar</goal>
                         </goals>
                         <configuration>
                             <resourcesDir>${project.build.directory}/resources</resourcesDir>
