--- a/platform/error/platform-error-impl/pom.xml
+++ b/platform/error/platform-error-impl/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>8.1.10.v20130312</version>
+            <version>${jetty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.fastjson</groupId>
